<resources>
    <string name="app_name">PaystackUI</string>
    <string name="visa_logo">Visa logo</string>
    <string name="card_number">Card number</string>
    <string name="card_digit_placeholder_text">XXXX XXXX XXXX XXXX</string>
    <string name="valid_through">Valid through</string>
    <string name="name_on_card">NAME ON CARD</string>
    <string name="expiry_date">Expiry date</string>
    <string name="security_code">Security code</string>
    <string name="pay">Pay</string>
    <string name="paystack">paystack</string>
    <string name="card_holder">Card holder</string>
    <string name="amount_description">You are about to pay the sum of</string>
    <string name="card_number_hint">CARD NUMBER</string>
    <string name="valid_through_format">MM/YY</string>
    <string name="cvv">CVV</string>
    <string name="cvv_hint">***</string>
    <string name="save_card_data">Save card data for future payment</string>
    <string name="save_bank_data">Save bank data for future payment</string>
    <string name="cvv_helper_text">A three-digit code on your debit card that you can find on the back of your card.</string>
    <string name="cvv_helper_header">What is CVV?</string>
    <string name="ok">OK</string>
    <string name="card_holder_placeholder">No Card Name</string>
    <string name="scan_your_card">Scan your card</string>
    <string name="scan_card_long_text">Please ensure the card number is visible and you\'ve enough lighting.</string>
    <string name="center_card">Place card within box</string>
    <string name="cvv_less_digit_error">CVV can\'t be less than 3 digits.</string>
    <string name="cvv_empty_error">CVV can\'t be empty</string>
    <string name="expiry_empty_error">Expiry date can\'t be empty.</string>
    <string name="card_number_empty_error">Card number can\'t be empty.</string>
    <string name="invalid_card_number_error">Not a valid card number.</string>
    <string name="expire_invalid_error">Invalid expiry date format.</string>
    <string name="transaction_processing">Processing transaction…</string>
    <string name="card_image">Card Image</string>
    <string name="saved_payment_cards">Saved Payment Cards</string>
    <string name="master_card">Master Card</string>
    <string name="verve">Verve</string>
    <string name="visa">Visa</string>
    <string name="secured_by">Secured by</string>
    <string name="pay_with_card">Pay with card</string>
    <string name="pay_with_bank">Pay with bank</string>
    <string name="payment_type_question">How will you like to make your payment?</string>
    <string name="bank_name">Bank name</string>
    <string name="account_number">ACCOUNT NUMBER</string>
    <string name="account_number_">Account number</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="_1990_06_02">1990–06-02</string>
    <string name="bank_spinner_placeholder">SELECT BANK</string>
    <string name="select_bank_error_message">You need to select your bank.</string>
    <string name="account_number_invalid_error">Account number can\'t be empty.</string>
    <string name="acccount_number_less_error">Invalid account number.</string>
    <string name="dob_invalid_error">Date of birth can\'t be empty.</string>
    <string name="dob_less_error">Invalid date of birth.</string>
    <string name="saved_payment_banks">Saved Payment Banks</string>
    <string name="pay_with_card_question"><u>Pay with bank instead?</u></string>
    <string name="pay_with_bank_question"><u>Pay with card instead?</u></string>
    <string name="paystack_logo">Paystack logo</string>
    <string name="saved_banks"><u>Show saved banks</u></string>
    <string name="saved_cards"><u>Show saved cards</u></string>
</resources>