<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".autodetectcard.DetectCardActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_layout">


        <SurfaceView
            android:id="@+id/surface_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/card_detection_size"
            android:layout_centerInParent="true"
            android:layout_margin="@dimen/space_16"
            android:background="@drawable/ocr_card_guide_bg" />

        <View
            android:id="@+id/success_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/card_detection_size"
            android:layout_centerInParent="true"
            android:layout_margin="@dimen/space_16"
            android:visibility="gone"
            android:background="@drawable/ocr_card_guide_bg_success" />

        <TextView
            android:id="@+id/center_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/center_card"
            android:textColor="@color/white"
            android:textSize="18sp" />



    </RelativeLayout>

    <LinearLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="@dimen/space_24">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingBottom="@dimen/space_8"
            android:text="@string/scan_your_card"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/scan_card_long_text"
            android:textAlignment="center"
            android:textSize="16sp" />

    </LinearLayout>

</RelativeLayout>